Fixes typo in waybackurls readme

--- a/waybackurls/README.mkd
+++ b/waybackurls/README.mkd
@@ -1,6 +1,6 @@
 # waybackurls
 
-Accept line-delimited domains on stdin, fetch known URLs from the Wayback Machine for `*.domain` and output them om stdout.
+Accept line-delimited domains on stdin, fetch known URLs from the Wayback Machine for `*.domain` and output them on stdout.
 
 Usage example:
 
