--- a/unfurl/README.mkd
+++ b/unfurl/README.mkd
@@ -1,3 +1,42 @@
 # unfurl
 
 Pull out bits of URLs provided on `stdin`
+
+## Usage
+
+```
+▶ cat urls | unfurl querykeys | head -n5
+utm_content
+next
+redirect
+utm_source
+q
+```
+
+```
+▶ cat urls | unfurl queryvalues | head -n5
+14324
+7463
+about
+home
+true
+```
+
+```
+▶ cat urls | unfurl paths | head -n5
+/robots.txt
+/favicon.ico
+/session
+/.well-known/security.txt
+/about-us
+```
+
+```
+▶ cat urls | unfurl domains | head -n5
+example.com
+subdomain.example.com
+example.net
+example.edu
+footle.com
+```
+
