Adds help output

--- a/unfurl/README.mkd
+++ b/unfurl/README.mkd
@@ -2,41 +2,36 @@
 
 Pull out bits of URLs provided on `stdin`
 
-## Usage
+## Help
 
 ```
-▶ cat urls | unfurl keys | head -n5
-utm_content
-next
-redirect
-utm_source
-q
-```
+▶ unfurl -h
+Format URLs provided on stdin
 
-```
-▶ cat urls | unfurl values | head -n5
-14324
-7463
-about
-home
-true
-```
+Usage:
+  unfurl [OPTIONS] [MODE] [FORMATSTRING]
 
-```
-▶ cat urls | unfurl format %p | head -n5
-/robots.txt
-/favicon.ico
-/session
-/.well-known/security.txt
-/about-us
-```
+Options:
+  -u, --unique   Only output unique values
+  -v, --verbose  Verbose mode (output URL parse errors)
 
-```
-▶ cat urls | unfurl format %d | head -n5
-example.com
-subdomain.example.com
-example.net
-example.edu
-footle.com
-```
+Modes:
+  keys     Keys from the query string (one per line)
+  values   Values from the query string (one per line)
+  domains  The hostname (e.g. sub.example.com)
+  paths    The request path (e.g. /users)
+  format   Specify a custom format (see below)
 
+Format Directives:
+  %%  A literal percent character
+  %s  The request scheme (e.g. https)
+  %d  The domain (e.g. sub.example.com)
+  %P  The port (e.g. 8080)
+  %p  The path (e.g. /users)
+  %q  The raw query string (e.g. a=1&b=2)
+  %f  The page fragment (e.g. page-section)
+
+Examples:
+  cat urls.txt | unfurl keys
+  cat urls.txt | unfurl format %s://%d%p?%q
+```
