--- a/qsreplace/README.mkd
+++ b/qsreplace/README.mkd
@@ -4,17 +4,37 @@ Accept URLs on stdin, replace all query string values with a user-supplied value
 
 ## Usage
 
+Example input file:
 ```
 ▶ cat urls.txt 
 https://example.com/path?one=1&two=2
 https://example.com/path?two=2&one=1
 https://example.com/pathtwo?two=2&one=1
 https://example.net/a/path?two=2&one=1
+```
 
+Replace query string values:
+```
 ▶ cat urls.txt | qsreplace newval
 https://example.com/path?one=newval&two=newval
 https://example.com/pathtwo?one=newval&two=newval
 https://example.net/a/path?one=newval&two=newval
+```
+
+Append to query string values:
+```
+▶ cat urls.txt | qsreplace -a newval
+https://example.com/path?one=1newval&two=2newval
+https://example.com/pathtwo?one=1newval&two=2newval
+https://example.net/a/path?one=1newval&two=2newval
+```
+
+You can omit the argument to only output each combination of URL and query string keys once:
+```
+▶ cat urls.txt | qsreplace -a 
+https://example.com/path?one=1&two=2
+https://example.com/pathtwo?one=1&two=2
+https://example.net/a/path?one=1&two=2
 ```
 
 ## Install
