--- a/gittrees/README.mkd
+++ b/gittrees/README.mkd
@@ -11,7 +11,7 @@ go get -u github.com/tomnomnom/hacks/gittrees
 ## Usage
 
 ```
-> gittrees ~/path/to/repo
+▶ gittrees ~/path/to/repo
 79e0815a8c82d0f1f8f467b01d97143a8fed7048 .gitignore
 b7214221c4b62b4712f783c2b7c3b8fc4f076fbc .travis.yml
 2fa1a8731c67462f4eef8ae6b92623a2cc726a5d ADVANCED.mkd
@@ -26,10 +26,10 @@ c94339d0f1e05b5a80972eccc968c60f048a19ec docs/images/key.png
 ```
 
 You might want to grep the contents of these objects. As an example, here's how
-you could grep the contents of all objects that were js files for 'console.log':
+you could grep the contents of all objects in the current repo that were/are js files for 'console.log':
 
 ```
-> gittrees .. | grep '\.js' | cut -d' ' -f1 | git cat-file --batch | grep -a 'console.log'
+▶ gittrees | grep '\.js' | cut -d' ' -f1 | git cat-file --batch | grep -a 'console.log'
 ```
 
 
