Adds custom ports etc to webpaste

--- a/webpaste/extension/README.mkd
+++ b/webpaste/extension/README.mkd
@@ -3,6 +3,6 @@
 Maybe it should be webpipe? I think that's taken though.
 
 ## TODO
-* Multiple snippets
 * Site match rules for snippets
+    * Keyboard shortcut for first rule that matches?
 * Proper error handling (maybe)
