TODO additions on webpaste

--- a/webpaste/extension/README.mkd
+++ b/webpaste/extension/README.mkd
@@ -6,3 +6,5 @@ Maybe it should be webpipe? I think that's taken though.
 * Site match rules for snippets
     * Keyboard shortcut for first rule that matches?
 * Proper error handling (maybe)
+* Multiple server/token profiles?
+    * E.g. local + vps
