--- a/qsreplace/README.mkd
+++ b/qsreplace/README.mkd
@@ -1,47 +1,8 @@
 # qsreplace
 
-Accept URLs on stdin, replace all query string values with a user-supplied value.
+## This Tool Has Moved!
 
-## Usage
+I thought it was kinda useful so I moved it to [it's own repo](https://github.com/tomnomnom/qsreplace).
 
-Example input file:
-```
-▶ cat urls.txt 
-https://example.com/path?one=1&two=2
-https://example.com/path?two=2&one=1
-https://example.com/pathtwo?two=2&one=1
-https://example.net/a/path?two=2&one=1
-```
 
-Replace query string values:
-```
-▶ cat urls.txt | qsreplace newval
-https://example.com/path?one=newval&two=newval
-https://example.com/pathtwo?one=newval&two=newval
-https://example.net/a/path?one=newval&two=newval
-```
-
-Append to query string values:
-```
-▶ cat urls.txt | qsreplace -a newval
-https://example.com/path?one=1newval&two=2newval
-https://example.com/pathtwo?one=1newval&two=2newval
-https://example.net/a/path?one=1newval&two=2newval
-```
-
-You can omit the argument to only output each combination of URL and query string keys once:
-```
-▶ cat urls.txt | qsreplace -a 
-https://example.com/path?one=1&two=2
-https://example.com/pathtwo?one=1&two=2
-https://example.net/a/path?one=1&two=2
-```
-
-## Install
-
-With Go:
-
-```
-▶ go get -u github.com/tomnomnom/hacks/qsreplace
-```
 
