--- a/fff/README.mkd
+++ b/fff/README.mkd
@@ -24,16 +24,15 @@ Basic usage:
 Options:
 
 ```
---delay <int>
-    delay between issuing requests (ms) (default 100)
---header <string>, -H <string>
-    add a header to the request
---keep-alive
-    use HTTP keep-alives
---output <string>
-    output directory (default "out")
---save
-    save responses in the output dir
+▶ fff --help
+Request URLs provided on stdin fairly frickin' fast
+
+Options:
+  -d, --delay <delay>       Delay between issuing requests (ms)
+  -H, --header <header>     Add a header to the request (can be specified multiple times)
+  -o, --output <dir>        Directory to save responses in (will be created)
+  -s, --save-status <code>  Save responses with given status code (can be specified multiple times)
+  -S, --save                Save all responses
 ```
 
 ## Tuning
