--- a/filter-resolved/README.mkd
+++ b/filter-resolved/README.mkd
@@ -11,5 +11,5 @@ Usage example:
 Install:
 
 ```
-▶ go get github.com/tomnomnom/hacks/filter-resolved
+▶ go install github.com/tomnomnom/hacks/filter-resolved@latest
 ```
